--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta name="twitter:image" content="https://skytup.com/assets/developer-portal-og-image.jpg"--> <!-- Replace with actual image -->
     <!-- Favicon -->
     <link rel="icon" href="https://developer.skytup.com/favicon.ico" type="image/x-icon"> <!-- Replace with actual favicon -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9581453644639189" crossorigin="anonymous"></script>
     <style>
         * {
             margin: 0;
